--- a/components/search-input.module.scss
+++ b/components/search-input.module.scss
@@ -30,7 +30,7 @@
 	appearance: none;
 	margin-left: lib.$layout-spacing-x-small;
 	padding-left: lib.$layout-spacing-x-small;
-	border-radius: none;
+	border-radius: 0px;
 	width: 100%;
 
 	transition: all .2s ease-out;
